# sortiment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  setup.cfg  tailwind.config.js
.github/workflows/: build.yml  pre-commit.yml
css/: tailwind.css
docker/: start.sh
docker/s6/gunicorn/: run
docker/s6/migrations/: up
docker/s6/proxy/: run
sortiment/: asgi.py  manage.py  settings.py  start_dev.sh  urls.py  wsgi.py
sortiment/css/: app.css
sortiment/js/: app.js
sortiment/js/controllers/: barcode.js  menu-toggle.js
sortiment/sortiment/: __init__.py  asgi.py  context_processors.py  settings.py  turbo.py  urls.py
sortiment/static/: app.css
sortiment/store/: admin.py  apps.py  cart.py  forms.py  helpers.py  logic.py  models.py  urls.py  views.py
sortiment/store/helpers/: __init__.py  events.py
sortiment/store/migrations/: 0001_initial.py  0002_alter_product_image_alter_product_tags.py  0002_initial.py  0003_alter_product_ean_alter_product_image.py  0003_alter_product_image_alter_product_tags.py  0004_alter_product_tags.py  0004_delete_transaction.py  0005_warehouse_ip.py  0005_warehouse_ip_alter_product_barcode.py  0006_remove_product_total_price_and_more.py  0007_warehousestate_whstate_wh_prod_unique.py  0008_alter_warehousestate_total_price.py  0009_product_is_dummy.py  0010_warehouseevent_retail_price_and_more.py  0011_alter_product_barcode_alter_product_image_and_more.py  0012_alter_product_barcode_alter_product_is_dummy.py  0013_reset.py  0014_alter_product_image.py  0015_auto_20240703_2338.py
sortiment/store/services/: cart.py  inventory.py  room.py
sortiment/store/views/: mixins.py  settings.py  storefront.py
sortiment/style/: app.css  apps.py
sortiment/style/js/: app.js
sortiment/transactions/: admin.py  apps.py  models.py
sortiment/transactions/migrations/: 0001_initial.py
sortiment/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sortiment/users/migrations/: 0001_initial.py  0002_alter_sortimentuser_barcode_and_more.py  0002_user_credit.py  0003_alter_sortimentuser_credit.py  0004_sortimentuser_is_guest.py  0005_creditlog_is_purchase.py  0007_creditlog_message.py  (+3 more)
(+46 files in other folders)
