[project]
name = "sortiment"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "django>=5.0.6,<6",
    "gunicorn>=23.0.0,<24",
    "django-feather>=0.3.0,<0.4",
    "django-debug-toolbar>=4.4.6,<5",
    "django-htmx>=1.17.3,<2",
    "django-ipware>=7.0.1,<8",
    "django-widget-tweaks>=1.5.0,<2",
    "sentry-sdk>=2.5.1,<3",
    "django-stubs>=5.0.2,<6",
    "psycopg[binary]>=3.1.17,<4",
    "django-probes>=1.8.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.5.0,<0.6",
    "pre-commit>=3.7.1,<4",
    "bumpver>=2023.1129,<2024",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]

[tool.bumpver]
current_version = "2025.8"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"sortiment/__init__.py" = [
    'VERSION = "{version}"',
]
